[package]
name = "poogie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = { version = "0.10.0", features = ["wgsl-in", "glsl-in", "spv-out"] }
winit = "0.26.1"
ash = "0.37"
anyhow = "1.0.57"
log = "0.4.17"
env_logger = "0.9.0"
ash-window = "0.10.0"
raw-window-handle = "0.3"
thiserror = "1.0.37"
gpu-allocator = "0.20.0"
gltf = "1.0.0"
glam = "0.22.0"
memoffset = "0.7.1"
